# CmdBar

./: .gitignore  README.md  package-lock.json  package.json  repomix-output.xml  repomix.config.json
.cargo/: config.toml
src/: App.vue
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddEditCmdModal.vue  CmdBar.vue  MacTitleBar.vue
